--- a/NLP Explore Notes.ipynb
+++ b/NLP Explore Notes.ipynb
@@ -3315,6 +3315,15 @@
     "#take a look at sentiment vs other variables\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#which news category has positive sentiment vs negative sentiment"
+   ]
   }
  ],
  "metadata": {
